Fixed letter spacing in preset 4

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@ body {
   font-weight: 500;
   font-size: 1.2rem;
   line-height: 120%;
-  letter-spacing: 0.5;
+  letter-spacing: 0.5rem;
 }
 
 .text-preset-5 {
